tests/baselines/reference/incompatiblePropertyErrorObjLiteralExactOptionalPropertyTypes1.errors.txt
incompatiblePropertyErrorObjLiteralExactOptionalPropertyTypes1.ts(5,3): error TS2322: Type 'number' is not assignable to type 'never'.
incompatiblePropertyErrorObjLiteralExactOptionalPropertyTypes1.ts(10,7): error TS2322: Type '{ a: number; b: number; }' is not assignable to type 'T2'.
  Types of property 'b' are incompatible.
    Type 'number' is not assignable to type 'never'.
incompatiblePropertyErrorObjLiteralExactOptionalPropertyTypes1.ts(21,7): error TS2322: Type '{ a: number; b: number; }' is not assignable to type 'T1'.
  Types of property 'b' are incompatible.
    Type 'number' is not assignable to type 'never'.
incompatiblePropertyErrorObjLiteralExactOptionalPropertyTypes1.ts(28,7): error TS2322: Type '{ a: number; b: number; }' is not assignable to type 'T2'.
  Type '{ a: number; b: number; }' is not assignable to type '{ a: number; b?: never; }'.
    Types of property 'b' are incompatible.
      Type 'number' is not assignable to type 'never'.


==== incompatiblePropertyErrorObjLiteralExactOptionalPropertyTypes1.ts (4 errors) ====
    type T1 = { a: number; b?: never };
    
    const t1: T1 = {
      a: 0,
      b: 0,
      ~
!!! error TS2322: Type 'number' is not assignable to type 'never'.
!!! related TS6500 incompatiblePropertyErrorObjLiteralExactOptionalPropertyTypes1.ts:1:24: The expected type comes from property 'b' which is declared here on type 'T1'
    };
    
    type T2 = { a: number; b?: never } | { a?: never; b: number };
    
    const t2: T2 = {
          ~~
!!! error TS2322: Type '{ a: number; b: number; }' is not assignable to type 'T2'.
!!! error TS2322:   Types of property 'b' are incompatible.
!!! error TS2322:     Type 'number' is not assignable to type 'never'.
      a: 0,
      b: 0,
    };
    
    // for comparison with the above:
    const obj1 = {
      a: 0,
      b: 0,
    }
    
    const t3: T1 = obj1;
          ~~
!!! error TS2322: Type '{ a: number; b: number; }' is not assignable to type 'T1'.
!!! error TS2322:   Types of property 'b' are incompatible.
!!! error TS2322:     Type 'number' is not assignable to type 'never'.
    
    const obj2 = {
      a: 0,
      b: 0,
    };
    
    const t4: T2 = obj2;
          ~~
!!! error TS2322: Type '{ a: number; b: number; }' is not assignable to type 'T2'.
!!! error TS2322:   Type '{ a: number; b: number; }' is not assignable to type '{ a: number; b?: never; }'.
!!! error TS2322:     Types of property 'b' are incompatible.
!!! error TS2322:       Type 'number' is not assignable to type 'never'.
    